# clo3d-mcp

./: .gitignore  README.md
clo_agent/: clo_agent.py
docs/: PLAN.md  api-signatures.md
examples/: README.md
protocol/: README.md  command.schema.json  result.schema.json
runtimes/: README.md  clo.py
runtimes/cpp-plugin/: CMakeLists.txt  README.md
runtimes/python-plugin/: README.md  clo_mcp_plugin.py
runtimes/python-script/: README.md
server/: README.md  pyproject.toml
server/src/clo3d_mcp/: __init__.py  connection.py  server.py
server/tests/: conftest.py  test_connection.py
