[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clo3d-mcp"
version = "0.1.0"
description = "MCP server for CLO3D: AI-assisted 3D garment design"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Violet Sphinx" }]
keywords = ["clo3d", "mcp", "fashion", "3d", "garment", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.scripts]
clo3d-mcp = "clo3d_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clo3d_mcp"]
